Fix slider margin on smaller screens

--- a/less/media-queries.less
+++ b/less/media-queries.less
@@ -128,6 +128,11 @@
 		margin-right: @gutter-width-small;
 	}
 
+	.cakifo-slider {
+		margin-left: ( -(@gutter-width-small) );
+		margin-right: ( -(@gutter-width-small) );
+	}
+
 	/* Turn 3 column layouts into a layout with a full width .site-main and two 50% width sidebars underneath */
 	.layout-3c-c,
 	.layout-3c-r,
